# lazy-nd

./: .gitignore  Cargo.toml  README.md  README.nd
src/: attribute_field.rs  attribute_info.rs  dim.rs  generic_info.rs  implement.rs  lazy_field.rs  lib.rs  macro_attributes.rs  macro_info.rs  quantity.rs  struct_attributes.rs  struct_attrs.rs  struct_field.rs  struct_fields.rs  struct_info.rs
tests/: 03-minimum_multiple.rs  04-field.rs  05-scalar.rs  06-vector.rs  07-duplicate.rs  07-duplicate.stderr  progress.rs
tests/attrib/: 01-minimum.rs  01-mismatch.stderr  02-mismatch.rs  02-mismatch.stderr  02-missing.rs  02-missing.stderr  03-empty.rs  03-empty.stderr  03-missing.stderr  04-empty.stderr  04-wrong.rs  04-wrong.stderr  05-extra.rs  05-extra.stderr
tests/fields/: 01-field.rs  02-scalar.rs  03-vector.rs  04-duplicate_nd.rs  04-duplicate_nd.stderr  05-duplicate_field.rs  05-duplicate_field.stderr  06-duplicate_cross.rs  06-duplicate_cross.stderr
tests/generics/: 02-minimum_multiple.rs  03-duplicate.stderr  04-duplicate.rs  04-duplicate.stderr  04-mismatch.rs  04-mismatch.stderr  05-match_mismatch.rs  05-match_mismatch.stderr  06-type.rs
tests/macro_attributes/both/: 01-generic_bool.rs  03-undefined_bool.rs  05-generic_invalid.rs
tests/macro_attributes/dim/: 03-invalid.rs  03-invalid.stderr  04-undefined.stderr  (+6 more)
tests/struct_attributes/: 01-dim_usize.rs  02-dim_generic.rs  02-scalar_field.rs  03-dim_generic_invalid.rs  04-vector_literal.rs  05-vector_generic.rs  06-inner_false.rs  08-both_usize_bool.rs  10-both_invalid_bool.rs  12-both_usize_invalid.rs
(+23 files in other folders)
