[package]
name = "lazy-nd"
version = "0.1.0"
edition = "2021"
autotests = false
publish = false
[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/progress.rs"

[dev-dependencies]
trybuild = "1.0.103"
[dependencies]
ndarray = "0.16.1"
proc-macro2 = "1.0.93"
quote = "1.0.38"
syn = { version = "2.0.92" }
